[package]
name = "consoletools"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Interactive console library with thread-safe global logging, flexible text formatting, and file persistence"
repository = "https://github.com/misha275/consoletools"
readme = "README.md"

[dependencies]
crossterm = "0.29"
